scribble/scribble-assertions/src/test/resources/bad/extensions/assertions/DbCTemporalSat.scr
module bad.extensions.assertions.DbCTemporalSat;


type <java> "java.lang.int" from "rt.jar" as int;
type <java> "java.lang.Long" from "rt.jar" as Long;

// Temporal Satisfiability
global protocol Proto1(role A, role B)
{
	//[x<10]
	MSG(x:int) from A to B;  @"(x < 10)"

	//[x>y && y>6]
	MSG(y:int) from B to A;  @"((x > y) && (y > 6))"
}
